:construction: Add the AndroidUrlHandler

--- a/Toggl.Droid/Toggl.Droid.csproj
+++ b/Toggl.Droid/Toggl.Droid.csproj
@@ -354,6 +354,7 @@
     <Compile Include="Helper\IPermissionRequesterComponent.cs" />
     <Compile Include="Presentation\ActivityPresenter.cs" />
     <Compile Include="Presentation\AndroidPresenter.cs" />
+    <Compile Include="Presentation\AndroidUrlHandler.cs" />
     <Compile Include="Presentation\DialogFragmentPresenter.cs" />
     <Compile Include="Presentation\ViewModelCache.cs" />
     <Compile Include="Startup\AndroidDependencyContainer.cs" />
