--- a/Toggl.Droid/Toggl.Droid.csproj
+++ b/Toggl.Droid/Toggl.Droid.csproj
@@ -359,6 +359,7 @@
     </Compile>
     <Compile Include="Adapters\SelectProjectRecyclerAdapter.cs" />
     <Compile Include="Services\JobServicesConstants.cs" />
+    <Compile Include="Services\RemoteConfigUpdateServiceAndroid.cs" />
     <Compile Include="Services\SyncJobService.cs" />
     <Compile Include="Services\TogglFirebaseIIDService.cs" />
     <Compile Include="Services\TogglFirebaseMessagingService.cs" />
