--- a/Toggl.Droid/ProGuard.cfg
+++ b/Toggl.Droid/ProGuard.cfg
@@ -1,13 +1,18 @@
+
+-keep class android.net.http.AndroidHttpClient
+
+-keep class android.support.design.internal.BaselineLayout
+-keep class android.support.design.widget.BottomNavigationView
+-keep class android.support.design.widget.AppBarLayout$* { *; }
+-keep class android.support.design.widget.Snackbar$* { *; }
+
 -keep class com.google.android.gms.auth.api.internal.zzc {
     android.content.Intent getSignInIntent(com.google.android.gms.common.api.GoogleApiClient);
 }
 
--keep class android.support.** { *; }
+-keep class com.google.android.gms.internal.zzemf { *; }
 
--dontwarn sun.misc.Unsafe
-
--dontwarn android.support.**
-
--dontwarn com.google.android.gms.**
--keep class com.google.android.gms.** { *; }
--keep class com.google.firebase.** { *; } 
+-keep class com.google.android.gms.internal.zzal {
+    void addHeader(java.lang.String,java.lang.String);
+	void setURI(java.net.URI);
+}
