--- a/Toggl.Droid/Properties/AndroidManifest.xml
+++ b/Toggl.Droid/Properties/AndroidManifest.xml
@@ -11,5 +11,10 @@
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<uses-permission android:name="android.permission.READ_CALENDAR" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<application android:allowBackup="false" android:icon="@mipmap/ic_launcher" android:label="Toggl for Devs"></application>
+	<application 
+    android:allowBackup="false" 
+    android:icon="@mipmap/ic_launcher" 
+    android:label="Toggl for Devs">
+    <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+  </application>
 </manifest>
