:sparkles: Implement handoff

--- a/Toggl.iOS/Info.plist
+++ b/Toggl.iOS/Info.plist
@@ -88,7 +88,13 @@
 	<string>en</string>
 	<key>CFBundleLocalizations</key>
 	<array>
-	     <string>en</string>
+		<string>en</string>
+	</array>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>com.toggl.daneel.log</string>
+		<string>com.toggl.daneel.reports</string>
+		<string>com.toggl.daneel.settings</string>
 	</array>
 </dict>
 </plist>
