--- a/Toggl.iOS/Toggl.iOS.csproj
+++ b/Toggl.iOS/Toggl.iOS.csproj
@@ -2013,6 +2013,7 @@
     <Compile Include="Cells\Settings\SettingsButtonCell.designer.cs">
       <DependentUpon>SettingsButtonCell.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helper\Handoff.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Toggl.Core.UI\Toggl.Core.UI.csproj">
